--- a/css/main.css
+++ b/css/main.css
@@ -17,8 +17,8 @@ body{
 }
 .query-field{
     flex-direction: row;
-    justify-content: center;
-    width: 40vw;
+    justify-content: space-around;
+    width: 70vw;
     height: 40vh;
     margin-top: 2%;
 }
@@ -26,6 +26,27 @@ body{
     position: relative;   
 }
 
+
+#NumberOfFloor,#NumberOfLift{
+    height: 50px;
+    width: 300px;
+    border: none;
+    font-size: 20px;
+    border-bottom: 1px solid black;
+}
+
+#NumberOfFloor:focus-visible,#NumberOfLift:focus-visible{
+    outline: none;
+}
+
+#ButtonToCreate,#ButtonToCreateLift{
+    height: 40px;
+    width: 100px;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    background-color: #000;
+}
 
 .FloorContainer{
     display: grid;
@@ -82,6 +103,15 @@ body{
     border-radius: 5px;
 }
 
+.ElevatorContainer{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: flex-start;
+    align-content: flex-start;
+    width: 80vw;
+}
+
 
 .SingleLift{
     width: 120px;
@@ -89,7 +119,7 @@ body{
     background-color: cyan;
     position: absolute;
     bottom:20px;
-    left: 15%;
+    /* left: 15%; */
     transition: all 2.5s linear;
     display: flex;
     overflow: hidden;
